# openapi-sorter

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
openapi_sorter/: cli.py  openapi_sorter.py  pre_commit_hook.py
tests/: test_cli.py  test_openapi_sorter.py
